--- a/app/static/lab02_resume.html
+++ b/app/static/lab02_resume.html
@@ -10,7 +10,19 @@ lab02 204212 sec002 -->
   <link rel="stylesheet" href="/static/css/resume.css">
   <title>Original title</title>
 </head>
-<body>
-    <h1></h1>
+<body >
+  <div class="top">
+      <h1 >This is my Resume</h1>
+      <p>Pattaradanai chaitan | 660510667</p>
+  </div>
+  <h2 class="LB">Education</h2>
+  <div class="lineH">
+    <h3>Muangyom Wittayakarn School </h3> 
+    <p style="text-align: left;  text-indent: 30px;">GPAX 3.80 | Graduated in 2023</p>
+    <h3>Chiang Mai University</h3>
+    <p style="text-align: left;  text-indent: 30px;">Currently studying in the Faculty 
+  of Science, majoring in Computer Science, and expected to graduate in 2025.</p>
+  </div>
+  <h2 class="LB">Skills</h2>
 </body>
 </html>
