--- a/app/static/lab02_resume.html
+++ b/app/static/lab02_resume.html
@@ -24,5 +24,6 @@ lab02 204212 sec002 -->
   of Science, majoring in Computer Science, and expected to graduate in 2025.</p>
   </div>
   <h2 class="LB">Skills</h2>
+  <p>language skill python,c++,java,golang,assembly</p>
 </body>
 </html>
