--- a/app/static/lab02_resume.html
+++ b/app/static/lab02_resume.html
@@ -8,7 +8,7 @@ lab02 204212 sec002 -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/css/resume.css">
-  <title>Original title</title>
+  <title>Resume</title>
 </head>
 <body >
   <div class="top">
@@ -25,5 +25,10 @@ lab02 204212 sec002 -->
   </div>
   <h2 class="LB">Skills</h2>
   <p>language skill python,c++,java,golang,assembly</p>
+  <h2 class="LB">Project Experince</h2>
+  <div>
+    <li>a Java OOP 2D game Project</li>
+    <p style="text-indext : 50x ;"></p>
+  </div>
 </body>
 </html>
