--- a/app/static/lab02_resume.html
+++ b/app/static/lab02_resume.html
@@ -10,25 +10,26 @@ lab02 204212 sec002 -->
   <link rel="stylesheet" href="/static/css/resume.css">
   <title>Resume</title>
 </head>
-<body >
+<body class="textLc">
   <div class="top">
       <h1 >This is my Resume</h1>
-      <p>Pattaradanai chaitan | 660510667</p>
+      <p><strong>Pattaradanai chaitan | 660510667</strong></p>
   </div>
   <h2 class="LB">Education</h2>
-  <div class="lineH">
-    <h3>Muangyom Wittayakarn School </h3> 
-    <p style="text-align: left;  text-indent: 30px;">GPAX 3.80 | Graduated in 2023</p>
-    <h3>Chiang Mai University</h3>
-    <p style="text-align: left;  text-indent: 30px;">Currently studying in the Faculty 
+   <h3>Muangyom Wittayakarn School </h3> 
+   <p style="text-align: left; text-indent: 30px;">GPAX 3.80 | Graduated in 2023</p>
+   <h3>Chiang Mai University</h3>
+   <p style="text-align: left; text-indent: 30px;">Currently studying in the Faculty 
   of Science, majoring in Computer Science, and expected to graduate in 2025.</p>
-  </div>
   <h2 class="LB">Skills</h2>
-  <p>language skill python,c++,java,golang,assembly</p>
-  <h2 class="LB">Project Experince</h2>
-  <div>
-    <li>a Java OOP 2D game Project</li>
-    <p style="text-indext : 50x ;"></p>
-  </div>
+  <p style="text-align : left ; text-indent: 30px;">language skill python,c++,java,golang,assembly</p>
+  <h2 class="LB">Project Experience</h2>
+  <h3>Java OOP 2D game Project</h3>
+
+  <ul style="line-height:20px;">
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+  </ul>  
 </body>
 </html>
