--- a/app/static/lab02_resume.html
+++ b/app/static/lab02_resume.html
@@ -12,24 +12,145 @@ lab02 204212 sec002 -->
 </head>
 <body class="textLc">
   <div class="top">
-      <h1 >This is my Resume</h1>
-      <p><strong>Pattaradanai chaitan | 660510667</strong></p>
+      <h1>Pattaradanai Chaitan | 660510667</h1>
   </div>
+  <h2 class="LB">Contact</h2>
+  <p><strong>GithubID : </strong><a href="https://github.com/bruh045"> bruh045</a></p>
+  <p><strong>Gmail : </strong>icrx05@gmail.com</p>
+  <p><strong>Tel :</strong>062-521-0878</p>
   <h2 class="LB">Education</h2>
    <h3>Muangyom Wittayakarn School </h3> 
-   <p style="text-align: left; text-indent: 30px;">GPAX 3.80 | Graduated in 2023</p>
+   <p><strong>GPAX :</strong>3.80 | Graduated in 2023</p>
    <h3>Chiang Mai University</h3>
-   <p style="text-align: left; text-indent: 30px;">Currently studying in the Faculty 
-  of Science, majoring in Computer Science, and expected to graduate in 2025.</p>
+   <p><strong>GPAX :</strong> 2.50</p>
+   <p><strong>Major GPAX :</strong> 3.00</p>
+   <p>Currently studying in the Faculty 
+  of Science, majoring in Computer Science,
+   and expected to graduate in 2027.</p>
   <h2 class="LB">Skills</h2>
-  <p style="text-align : left ; text-indent: 30px;">language skill python,c++,java,golang,assembly</p>
+  <p><strong>Programming Language : </strong>Python,C++,Java,Golang,Assembly</p>
+  <p><strong>Language :</strong></p> 
+  <p><span class="opac">Fluent:</span> Thai , English</p>
   <h2 class="LB">Project Experience</h2>
-  <h3>Java OOP 2D game Project</h3>
-
-  <ul style="line-height:20px;">
-    <li>Coffee</li>
-    <li>Tea</li>
-    <li>Milk</li>
-  </ul>  
+  <ol>
+      <li><h3>Java OOP 2D game Project,2023</h3></li>
+      <ul style="line-height:20px;" ; class = "a">
+        <li>Write code to create a menu for the game, make a player that can move in the directions we specify, include enemies to face</li>
+        <li>Fix any bugs that occur</li>
+        <li><strong>Tool</strong></li>
+        <ul style="line-height:20px;"  ; class = "a">
+            <li>NetBeans</li>
+            <li>Photoshop</li>
+            <li>Visual Studio Code</li>
+            <li>Github Desktop</li>
+        </ul>  
+       </ul>
+    <li><h3>Data analysis with Python,2024</h3></li>
+       <ul style="line-height:20px;" ; class = "a">
+            <li>Clean the 2111 dataset from the <a href="https://www.kaggle.com/datasets/fatemehmehrparvar/obesity-levels"><strong>Obesity level dataset</strong></a> 
+        and present the results in the form of a graph</li>
+  </ol>
+  <h1>Midterm exam schedule</h1>
+  <table class="S">
+    <tr>
+      <th rowspan="2";colspan="2" ;class = "opac"><span style="color : white ; ">Time</span></th>
+      <th colspan="7" ;><span style="color : white ;">January</span></th>
+    </tr>
+    <tr>
+      <td class = "color">Mon</td>
+      <td>Tue</td>
+      <td class = "color">Wed</td>
+      <td>Thu</td>
+      <td class = "color">Fri</td>
+      <td>Sat</td>
+      <td class = "color">Sun</td>
+    </tr>
+    <tr>
+      <td><table class="nested">
+        <tr><td class="m">08.00-11.00</td></tr>
+          <tr><td class="d">12.00-15.30</td></tr>
+          <tr><td class="e">15.30-18.30</td></tr>
+      </table></td>
+      <td class = "color"></td>
+      <td></td>
+      <td class = "color">1</td>
+      <td>2</td>
+      <td class = "color">3</td>
+      <td>4</td>
+      <td class = "color">5</td>
+    </tr>
+    <tr>
+      <td ><table class="nested">
+        <tr><td class="m">08.00-11.00</td></tr>
+          <tr><td class="d">12.00-15.30</td></tr>
+          <tr><td class="e">15.30-18.30</td></tr>
+      </table></td>
+      <td class = "color"><table class="nested">
+        <tr><td class="m"> 204232</td></tr>
+          <tr><td class="d">&ensp;</td></tr>
+          <tr><td class="e">001225</td></tr>
+      </table></td>
+      <td>7</td>
+      <td class = "color"><table class="nested">
+        <tr><td class="m">&ensp;</td></tr>
+          <tr><td class="d">&ensp;</td></tr>
+          <tr><td class="e">204212</td></tr>
+      </table></td>
+      <td>9</td>
+      <td class = "color">10</td>
+      <td><table class="nested">
+        <tr><td class="m">&ensp;</td></tr>
+          <tr><td class="d">201111</td></tr>
+          <tr><td class="e">&ensp;</td></tr>
+      </table></td>
+      <td class = "color"><table class="nested">
+        <tr><td class="m">&ensp;</td></tr>
+          <tr><td class="d">&ensp;</td></tr>
+          <tr><td class="e">018131</td></tr>
+      </table></td>
+    </tr>
+    <tr>
+      <td><table class="nested">
+        <tr><td class="m">08.00-11.00</td></tr>
+          <tr><td class="d">12.00-15.30</td></tr>
+          <tr><td class="e">15.30-18.30</td></tr>
+      </table></td>
+      <td class = "color">13</td>
+      <td>14</td>
+      <td class = "color">15</td>
+      <td>16</td>
+      <td class = "color">17</td>
+      <td>18</td>
+      <td class = "color">19</td>
+    </tr>
+    <tr>
+      <td><table class="nested">
+        <tr><td class="m">08.00-11.00</td></tr>
+          <tr><td class="d">12.00-15.30</td></tr>
+          <tr><td class="e">15.30-18.30</td></tr>
+      </table></td>
+      <td class = "color">20</td>
+      <td>21</td>
+      <td class = "color">22</td>
+      <td>23</td>
+      <td class = "color">24</td>
+      <td>25</td>
+      <td class = "color">26</td>
+    </tr>
+    <tr>
+      <td><table class="nested">
+        <tr><td class="m">08.00-11.00</td></tr>
+          <tr><td class="d">12.00-15.30</td></tr>
+          <tr><td class="e">15.30-18.30</td></tr>
+      </table></td>
+      <td class = "color">27</td>
+      <td>28</td>
+      <td class = "color">29</td>
+      <td>30</td>
+      <td class = "color">31</td>
+      <td></td>
+      <td class = "color"></td>
+    </tr>
+  </table>
 </body>
 </html>
