--- a/app/static/lab02_resume.html
+++ b/app/static/lab02_resume.html
@@ -30,7 +30,8 @@ lab02 204212 sec002 -->
   <h2 class="LB">Skills</h2>
   <p><strong>Programming Language : </strong>Python,C++,Java,Golang,Assembly</p>
   <p><strong>Language :</strong></p> 
-  <p><span class="opac">Fluent:</span> Thai , English</p>
+  <p><span class="opac">Intermediate:</span>English</p>
+  <p><span class="opac">Fluent:</span> Thai</p>
   <h2 class="LB">Project Experience</h2>
   <ol>
       <li><h3>Java OOP 2D game Project,2023</h3></li>
