--- a/app/static/lab02_resume.html
+++ b/app/static/lab02_resume.html
@@ -48,8 +48,8 @@ lab02 204212 sec002 -->
        </ul>
     <li><h3>Data analysis with Python,2024</h3></li>
        <ul style="line-height:20px;" ; class = "a">
-            <li>Clean the 2111 dataset from the <a href="https://www.kaggle.com/datasets/fatemehmehrparvar/obesity-levels"><strong>Obesity level dataset</strong></a> 
-        and present the results in the form of a graph</li>
+            <li>Clean the 2111 dataset from the <a href="https://www.kaggle.com/datasets/fatemehmehrparvar/obesity-levels"><strong>obesity-level dataset</strong></a> 
+        and present the results in the form of a graph.</li>
   </ol>
   <h1>Midterm exam schedule</h1>
   <table class="S">
