--- a/app/static/lab04_bootstrap.html
+++ b/app/static/lab04_bootstrap.html
@@ -1,34 +1,94 @@
 <!doctype html>
 <html lang="en">
-
-
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-
-
-
+    <link rel="stylesheet" href="/static/css/open-iconic-bootstrap.css">
+    <link rel="stylesheet" href="/static/css/mytwitter.css"
   <title>My Twitter</title>
 </head>
 
 
-<body>
 
-<nav class="navbar navbar-expand-md navbar-light">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#">Home</a>
-      <a class="nav-item nav-link" href="#">Moments</a>
-      <a class="nav-item nav-link" href="#">Notifications</a>
-      <a class="nav-item nav-link" href="#">Messages</a>
+<body>
+  <nav class="navbar navbar-expand-md navbar-light">
+    <div class="container">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="#"><span class="oi oi-home"></span> Home</a>
+        <a class="nav-item nav-link" href="#"><span class="oi oi-bolt"></span> Moments</a>
+        <a class="nav-item nav-link" href="#"><span class="oi oi-bell"></span> Notifications</a>
+        <a class="nav-item nav-link" href="#"><span class="oi oi-envelope-open"></span> Messages</a>
+      </div>
+      <form class="form-inline">
+        <input class="form-control" id="nav-search" type="search" placeholder="Search Twitter"> &nbsp;
+        <img class="tw-user-small rounded-circle" src="static/img/tweeterUserSmall.jpg"> &nbsp;
+        <button class="btn" id="nav-tweet-btn" type="submit">Tweet</button>
+      </form>
     </div>
-  </nav>  <!-- Optional JavaScript -->
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div id="left_3" class="col-md-3">
+        <div class="content-box">Account details</div>
+        <div class="content-box">Trends</div>
+      </div>
+      <div id="center_6" class="col-md-6">
+        <div class="content-box">
+          <div class="new-tweet-row">
+            <div class="row">
+              <div class="col-md-2">
+                <img src="static/img/tweeterUserSmall.jpg" class="tw-user-small rounded-circle mx-auto d-block">
+              </div>
+              <div class="col-md-9">
+                <form>
+                  <input id="tweet-input" class="form-control" type="text" placeholder="Whats happening?">
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="tweet">
+            <div class="row">
+              <div class="col-md-2 text-center">
+                <img class="tw-user-medium rounded-circle" src="static/img/tweeterUserSmall.jpg">
+              </div>
+              <div class="col-md-10">
+                <div class="row tweet-info">
+                  <div class="col-md-auto">
+                    <span class="tweet-username">Hamster News</span>
+                    <span class="tweet-usertag text-muted">@hamsternews</span>-
+                    <span class="tweet-age text-muted">1d</span>
+                  </div>
+                  <div class="col tweet-arrow text-muted">
+                    <span class="oi oi-arrow-thick-bottom float-right"></span>
+                  </div>
+                </div>
+                <div class="tweet-text">
+                  Hamsters like to run all night long, keeping
+                  you awake!!!
+                </div>
+                <div class="tweet-media">
+                  <img class="img-fluid rounded" src="static/img/hamsters-running.jpg">
+                </div>
+                <div class="row text-muted">
+                  <div class="col-md-2"><span class="oi oi-bullhorn"></span></div>
+                  <div class="col-md-2"><span class="oi oi-loop-circular"></span></div>
+                  <div class="col-md-2"><span class="oi oi-heart"></span></div>
+                  <div class="col-md-2"><span class="oi oi-envelope-open"></span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="right_3" class="col-md-3">
+        <div class="content-box">Who to follow</div>
+      </div>
+    </div>
+  </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -44,4 +104,3 @@
 
 
 </html>
-
