--- a/app/static/hw04_rwd.html
+++ b/app/static/hw04_rwd.html
@@ -12,334 +12,170 @@
 
 <body>
     <div class="row all">      
-        <!-- card1 -->
-    <!--col-xl-3 == 12/4 = 4 card per screen -->
-    <div class="col-sm-12 col-md-6 col-xl-3">
-        <div class="card">
-            <div class="card-title">
-                <h4>&nbsp;&nbsp;Card 1</h4>
-            </div>
-            <div class="card-body good">
-                <div class="row">
-                    <div class="col">
-                        <h5>09 December 2077</h5>
-                        <h1>5000</h1>
+            <!-- card1 -->
+        <!--col-xl-3 == 12/4 = 4 card per screen -->
+        <div class="col-sm-12 col-md-6 col-xl-3">
+            <div class="card">
+                <div class="card-title">
+                    <p style="text-align:left;">Card 1</p>
+                </div>
+                <div class="card-body hazardous">
+                    <div class="row">
+                        <div class="col">
+                            <h5>1 December</h5>
+                            <h5>2077</h5>
+                            <h2>5000</h2>
+                        </div>
+                        <div class="col icon-hazardous"></div>
                     </div>
-                    <div class="col icon-good">
+                    <div class="row">
+                        <div class="col">
+                                <p>Hazardous</p>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <h5>good</h5>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="col-4">
+                            <h6>Dec 2<br></h6>
+                            <h5 class="hazardous">500</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 3<br></h6>
+                            <h5 class="hazardous">800</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 4<br></h6>
+                            <h5 class="hazardous">900</h5>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col-4">
-                        <h5>10<br></h5>
-                        <h5 class="good">50</h5>
+        </div>
+        <!-- card2 -->
+        <div class="col-sm-12 col-md-6 col-xl-3">
+            <div class="card">
+                <div class="card-title">
+                    <p style="text-align:left;">Card 2</p>
+                </div>
+                <div class="card-body good">
+                    <div class="row">
+                        <div class="col">
+                            <h5>1 December</h5>
+                            <h5>2077</h5>
+                            <h2>5000</h2>
+                        </div>
+                        <div class="col icon-good"></div>
                     </div>
-                    <div class="col-4">
-                        <h5>20<br></h5>
-                        <h5 class="unhealthy">167</h5>
+                    <div class="row">
+                        <div class="col">
+                                <p>good</p>
+                        </div>
                     </div>
-                    <div class="col-4">
-                        <h5>30<br></h5>
-                        <h5 class="unhealthy">178</h5>
+                </div>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="col-4">
+                            <h6>Dec 2<br></h6>
+                            <h5 class="hazardous">500</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 3<br></h6>
+                            <h5 class="hazardous">800</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 4<br></h6>
+                            <h5 class="hazardous">900</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- card3 -->
+        <div class="col-sm-12 col-md-6 col-xl-3">
+            <div class="card">
+                <div class="card-title">
+                    <p style="text-align:left;">Card 3</p>
+                </div>
+                <div class="card-body moderate">
+                    <div class="row">
+                        <div class="col">
+                            <h5>1 December</h5>
+                            <h5>2077</h5>
+                            <h2>5000</h2>
+                        </div>
+                        <div class="col icon-moderate"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                                <p>moderate</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="col-4">
+                            <h6>Dec 2<br></h6>
+                            <h5 class="hazardous">500</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 3<br></h6>
+                            <h5 class="hazardous">800</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 4<br></h6>
+                            <h5 class="hazardous">900</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- card4 -->
+        <div class="col-sm-12 col-md-6 col-xl-3">
+            <div class="card">
+                <div class="card-title">
+                    <p style="text-align:left;">Card 4</p>
+                </div>
+                <div class="card-body unhealthy-sensitive">
+                    <div class="row">
+                        <div class="col">
+                            <h5>1 December</h5>
+                            <h5>2077</h5>
+                            <h2>5000</h2>
+                        </div>
+                        <div class="col icon-unhealthy-sensitive"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                                <p>unhealthy-sensitive</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="col-4">
+                            <h6>Dec 2<br></h6>
+                            <h5 class="hazardous">500</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 3<br></h6>
+                            <h5 class="hazardous">800</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 4<br></h6>
+                            <h5 class="hazardous">900</h5>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- card2 -->
-    <div class="col-sm-12 col-md-6 col-xl-3">
-        <div class="card">
-            <div class="card-title">
-                <h4>&nbsp;&nbsp;Card 2 </h4>
-            </div>
-            <div class="card-body moderate">
-                <div class="row">
-                    <div class="col">
-                        <h5>09 December 2077</h5>
-                        <h1>5000</h1>
-                    </div>
-                    <div class="col icon-moderate">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h5>moderate</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col-4">
-                        <h5>10<br></h5>
-                        <h5 class="good">50</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>20<br></h5>
-                        <h5 class="unhealthy">167</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>30<br></h5>
-                        <h5 class="unhealthy">178</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- card3 -->
-    <div class="col-sm-12 col-md-6 col-xl-3">
-        <div class="card">
-            <div class="card-title">
-                <h4>&nbsp;&nbsp;Card 3</h4>
-            </div>
-            <div class="card-body unhealthy-sensitive">
-                <div class="row">
-                    <div class="col">
-                        <h5>09 December 2077</h5>
-                        <h1>5000</h1>
-                    </div>
-                    <div class="col icon-unhealthy-sensitive">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h5>unhealthy for sensitive group</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col-4">
-                        <h5>10<br></h5>
-                        <h5 class="good">50</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>20<br></h5>
-                        <h5 class="unhealthy">167</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>30<br></h5>
-                        <h5 class="unhealthy">178</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- card4 -->
-    <div class="col-sm-12 col-md-6 col-xl-3">
-        <div class="card">
-            <div class="card-title">
-                <h4>&nbsp;&nbsp;Card 4</h4>
-            </div>
-            <div class="card-body unhealthy">
-                <div class="row">
-                    <div class="col">
-                        <h5>09 December 2077</h5>
-                        <h1>5000</h1>
-                    </div>
-                    <div class="col icon-unhealthy">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h5>unhealthy</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col-4">
-                        <h5>10<br></h5>
-                        <h5 class="good">50</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>20<br></h5>
-                        <h5 class="unhealthy">167</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>30<br></h5>
-                        <h5 class="unhealthy">178</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    
-    <!-- card5 -->
-    <div class="col-sm-12 col-md-6 col-xl-3">
-        <div class="card">
-            <div class="card-title">
-                <h4>&nbsp;&nbsp;Card 5</h4>
-            </div>
-            <div class="card-body very-unhealthy">
-                <div class="row">
-                    <div class="col">
-                        <h5>09 December 2077</h5>
-                        <h1>5000</h1>
-                    </div>
-                    <div class="col icon-very-unhealthy">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h5>very unhealthy</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col-4">
-                        <h5>10<br></h5>
-                        <h5 class="good">50</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>20<br></h5>
-                        <h5 class="unhealthy">167</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>30<br></h5>
-                        <h5 class="unhealthy">178</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- card6 -->
-    <div class="col-sm-12 col-md-6 col-xl-3">
-        <div class="card">
-            <div class="card-title">
-                <h4>&nbsp;&nbsp;Card 6</h4>
-            </div>
-            <div class="card-body hazardous">
-                <div class="row">
-                    <div class="col">
-                        <h5>09 December 2077</h5>
-                        <h1>5000</h1>
-                    </div>
-                    <div class="col icon-hazardous">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h5>hazardous</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col-4">
-                        <h5>10<br></h5>
-                        <h5 class="good">50</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>20<br></h5>
-                        <h5 class="unhealthy">167</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>30<br></h5>
-                        <h5 class="unhealthy">178</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- card7 -->
-    <div class="col-sm-12 col-md-6 col-xl-3">
-        <div class="card">
-            <div class="card-title">
-                <h4>&nbsp;&nbsp;Card 7</h4>
-            </div>
-            <div class="card-body unhealthy">
-                <div class="row">
-                    <div class="col">
-                        <h5>09 December 2077</h5>
-                        <h1>5000</h1>
-                    </div>
-                    <div class="col icon-unhealthy">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h5>unhealthy</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col-4">
-                        <h5>10<br></h5>
-                        <h5 class="good">50</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>20<br></h5>
-                        <h5 class="unhealthy">167</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>30<br></h5>
-                        <h5 class="unhealthy">178</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- card8 -->
-    <div class="col-sm-12 col-md-6 col-xl-3">
-        <div class="card">
-            <div class="card-title">
-                <h4>&nbsp;&nbsp;Card 8</h4>
-            </div>
-            <div class="card-body good">
-                <div class="row">
-                    <div class="col">
-                        <h5>09 December 2077</h5>
-                        <h1>5000</h1>
-                    </div>
-                    <div class="col icon-good">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h5>good</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col-4">
-                        <h5>10<br></h5>
-                        <h5 class="good">50</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>20<br></h5>
-                        <h5 class="unhealthy">167</h5>
-                    </div>
-                    <div class="col-4">
-                        <h5>30<br></h5>
-                        <h5 class="unhealthy">178</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-    </div>
+    <a href="https://youtu.be/GBIIQ0kP15E?si=4SEHwuJHDeWvh4wU">
+        <div class="noooo"></div>
+    </a>
 </body>
 </html>
